[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Gabriel Silva <gabrielssilva3107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"
django = ">=4.2,<4.3"
djangorestframework = ">=3.15.2,<4.0.0"
django-extensions = ">=3.2.3,<4.0.0"
django-debug-toolbar = ">=3.2.4,<3.3.0"
psycopg2-binary = "^2.9.10"
flake8 = "6.1.0"
whitenoise = "<6.9"
gunicorn = "^23.0.0"
gitpython = "^3.1.44"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
factory-boy = "^3.3.3"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
